# simple-mpi

./: Cargo.toml  README.md  run_examples.sh
.github/workflows/: doc_converter.py  docs.yml  prompt.jinja  style.md  style_checker.py
examples/: basic.rs  shared_array.rs
markdown_docs/: documentation.json  documentation.md
src/: lib.rs
