[package]
name = "simple-mpi"
version = "0.1.0"
edition = "2021"
description = "A simple MPI implementation for single-machine shared memory communication"
license = "AGPL-3.0-or-later"

[dependencies]
notify = "6.1"  # For file system monitoring
backtrace = "0.3"  # For stack traces
shared_memory = "0.12"  # For shared memory operations
thiserror = "1.0"  # For error handling
serde = { version = "1.0", features = ["derive"] }  # For serialization
bincode = "1.3"  # For binary serialization
log = "0.4"  # For logging
env_logger = "0.10"  # For logging initialization
bytemuck = { version = "1.14", features = ["derive"] }  # For type safety with plain old data

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "shared_array"
path = "examples/shared_array.rs"

